--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">maskerin</string>
+    <string name="attribute_nama">Nama</string>
     <string name="attribute_nik">NIK</string>
     <string name="attribute_email">Email</string>
     <string name="attribute_password">Password</string>
@@ -10,4 +11,5 @@
     <string name="title_order">Daftar Pesanan</string>
     <string name="title_profile">Profil</string>
     <string name="title_activity_maps">Map</string>
+    <string name="minimum_password">Masukkan minimal 6 karakter</string>
 </resources>
