Editing Login, Register, Profile, Edit Profile and some edit profile firebase get data structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_pharmacy">Apotek</string>
 
-    <string name="title_history">Histori Pemesanan</string>
+    <string name="title_history">Histori</string>
     <string name="title_profile">Profil</string>
     <string name="title_activity_maps">Map</string>
     <string name="minimum_password">Masukkan minimal 6 karakter</string>
